Added configuration screen (#1199)